[tool.poetry]
name = "caiper"
version = "0.1.0"
description = ""
authors = ["David Sonder <dave.sonder@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
pycairo = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
pdbpp = "^0.10.3"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
python-lsp-server = "^1.7.2"
python-lsp-black = "^1.2.1"
flake8-bugbear = "^23.3.23"
flake8-debugger = "^4.1.2"
flake8-isort = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
